Added my project

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Second week task</title>
+    <link href='https://fonts.googleapis.com/css?family=Jost' rel='stylesheet'>
+    <style>
+      *{
+        margin: 0;
+        padding: 0;
+    }
+    @font-face {
+        font-family: jost-regular;
+        src: url(../src/components/assets/fonts/jost-regular-webfont.woff);
+    }
+    @font-face {
+        font-family: jost-medium;
+        src: url(../src/components/assets/fonts/jost-medium-webfont.woff);
+    }
+    @font-face {
+        font-family: jost-semibold;
+        src: url(../src/components/assets/fonts/jost-semibold-webfont.woff);
+    }
+    @font-face {
+        font-family: playfairdisplay-regular;
+        src: url(../src/components/assets/fonts/playfairdisplay-regular-webfont.woff);
+    }
+    body{
+        background-color: #ffffff;
+        -webkit-tap-highlight-color: transparent;
+        font-family: "Jost";
+    }
+  </style>
   </head>
   <body>
     <noscript>
